--- a/style.css
+++ b/style.css
@@ -18,7 +18,21 @@ background-color: orange;
 	background-color: white;
 }
 
-.icon{
+.txte{
 
+	/*display: none;*/
+	padding-top: 100px;
+	padding-bottom: 100px;
+	display: flex;
+	align-items: flex-start;
+
+}
+
+.txte:hover{
+
+	transition: 3s;
+	transform:translateX(180px);
+	display: flex;
+	align-content: center;
 
 }
