--- a/style.css
+++ b/style.css
@@ -18,27 +18,23 @@ margin-right:60%;
 .image:hover{
 
 	background-color: white;
-	transition: 2s;
-	transform:translateX(180px);
+	
 }
 
 
 
-/*.txte{
+p{
 
-	
-	padding-top: 100px;
-	padding-bottom: 100px;
 	display: flex;
 	align-items: flex-start;
 
 }
 
-.txte:hover{
+.image:hover p{
 
 	transition: 3s;
 	transform:translateX(180px);
 	display: flex;
 	align-content: center;
 
-}*/
+}
